--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+h3{
+  color: rgb(93, 96, 96);
+}
+
+
 .App {
   text-align: center;
 }
@@ -13,7 +24,7 @@
   }
 }
 
-.App-header {
+.Appr-heade {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
