--- a/src/componentes/Footer/footer.css
+++ b/src/componentes/Footer/footer.css
@@ -1,9 +1,26 @@
-.cardRodape {
-    position: fixed;
-    bottom: 0%;
-    left: 0%;
-    right: 0%;
+.footer-container {
+    display: flex;
+    font-size: 12px;
+    margin: 0%;
+    justify-content: space-between;
+    flex-wrap: wrap;
     background-color:#b0b2b6;
-    text-align: center;
-    height: 50px;
+    text-align: left;
+    bottom: 0; /* Alinha à parte inferior */
+    left: 0; /* Alinha à esquerda */
+    right: 0; /* Alinha à direita */
+    padding: 10px;
+
+}
+ 
+
+
+
+ a {
+    color: #4CAF50; /* Cor dos links */
+    text-decoration: none; /* Remove sublinhado */
+}
+
+ a:hover {
+    text-decoration: underline; /* Sublinha ao passar o mouse */
 }
