--- a/src/componentes/Header/header.css
+++ b/src/componentes/Header/header.css
@@ -1,10 +1,14 @@
 .cabecalho {
-    margin-top: 0%;
-    background-color:#b0b2b6;
+    display: flex;
+    background-color:#83aaf8;
+    justify-content: center;
     text-align: center;
+    align-items: center;
     height: 50px;
+    transition: background-color 0.5s ease, padding 0.5s ease; /* Transição suave */
 }
 
-.cabecalho .item{
-    text-align: right;
+.cabecalho :hover {
+    color: rgb(18, 18, 158);
+    text-decoration: underline; /* Sublinha ao passar o mouse */
 }
