--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,130 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  width: 100%;
+  margin: 0 auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container-login {
+  width: 100%;
   min-height: 100vh;
+
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 15px;
+  background-color: rgb(253, 253, 253);
+}
+.wrap-login {
+  width: 390px;
+  background-color: #746c6c;
+  border-radius: 10px;
+ 
+  overflow: hidden;
+  padding: 77px 55px 33px 55px;
+  box-shadow: 0 5px 10px 0px;
+}
+.login-form-title {
+  display: block;
+  font-size: 30px;
+  color: azure;
+  line-height: 1.2;
+  text-align: center;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.warp-input {
+  margin-top: 15px;
+  width: 100%;
+  position: relative;
+  border-bottom: 2px solid #e44c06;
+  margin-bottom: 37px;
+}
+.input {
+  font-size: 15px;
+  color: #eee1e1;
+  line-height: 1.2;
+  border: none;
+  display: block;
+ 
+  width: 100%;
+  height: 45px;
+
+ background-color: transparent;
+
+ padding: 0 5px;
+}
+.focus-input {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  color: #eee1e1;
+}
+.focus-input::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  height: 2px;
+
+-webkit-transition: all 0.4s;
+-o-transition: all 0.4s;
+-moz-transition: all 0.4s;
+
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.focus-input::after {
+  font-size: 15px;
+  color: #9999;
+  line-height:1.2 ;
+ 
+  content: attr( data-placeholder);
+ 
+  display: block;
+  width: 100%;
+  position: absolute;
+  top: 16px;
+  left: 0px;
+
+  padding-left: 5px;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
 }
-.info {
-  background-color: rgb(40, 13, 141);
+
+
+.input:focus {
+  outline: 0;
+}
+
+input:focus + .focus-input::after {
+  top : -15px;
+}
+input:focus + .focus-input::before {
+  width: 100%;
+}
+
+.container-login-for-btn {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-bottom: 13px;
+}
+.login-for-btn {
+  font-size: 15px;
+  border: none;
+  border-radius: 10px;
+  color: aliceblue;
 }
