--- a/src/componentes/Section/section.css
+++ b/src/componentes/Section/section.css
@@ -1,9 +1,8 @@
 .selecao {
-    padding: 20px; /* Espaçamento interno */
-    margin: 20px; /* Margem externa */
-    border: 1px solid #ddd; /* Borda ao redor da seção */
+    padding:10px 40px; /* Espaçamento interno */
+    border: 1px solid #171616; /* Borda ao redor da seção */
     border-radius: 5px; /* Cantos arredondados */
-    background-color: #f9f9f9; /* Cor de fundo da seção */
+    background-color: #759bbe; /* Cor de fundo da seção */
 }
 
 
